# esl

./: README.md
rover/: Dockerfile  Makefile  docker-compose.yml  setup.cfg  setup.py
rover-saba/: README.rst  platformio.ini
rover-saba-arduino/: platformio.ini
rover-saba-arduino/boards/: calliope_mini2.json
rover-saba-arduino/src/: main.cpp
rover-saba/boards/: calliope_mini_rev2.json
rover-saba/doc/: Calliope mini rev2.0.b##
rover-saba/include/: frame.h
rover-saba/src/: frame.c  main.c
rover-saba/tools/JLinkCALLIOPEConfig_Linux_x86_64/: JLinkCALLIOPEConfig  libjlinkarm.so.6
rover-saba/zephyr/: CMakeLists.txt  prj.conf
rover-saba/zephyr/boards/arm/calliope_mini_rev2/: Kconfig.board  Kconfig.defconfig  calliope_mini_rev2.dts  calliope_mini_rev2.yaml  calliope_mini_rev2_defconfig
rover/src/rover/: __main__.py
rover/tests/interface/sab/: conftest.py  test_frame_read.py  test_frame_write.py
