[metadata]
name = rover
description = Rover
author = Alexander Jähnel
author-email = alexanderjaehnel@gmail.com
license = mit
long-description = file: README.md
platforms = linux
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
zip_safe = false
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    ahrs
    kivy
    numpy
    paho-mqtt
    pyserial
    pyserial-asyncio

[options.packages.find]
where = src
exclude =
    # nothing yet

[options.entry_points]
console_scripts =
    nue3d = rover.__main__:main

[tool:pytest]
console_output_style = classic
junit_family = xunit2

# [bdist_wheel]
# universal = 0

[flake8]
jobs = auto
max-methods = 10
max-local-variables = 10
# max-arguments = 10
isort-show-traceback = true
exclude =
    .git/*,
    build/*,
    dist/*
ignore =
# custom ignores
    # WPS602  # disallow @staticmethod
    # E800    # code comment
    # WPS226  # string const overuse
    # D       # docstrings
    D107        # docstring in __init__
    # S404    # subprocess
    Q000        # " are not bad quotes :)
